--- a/taillife/src/App.css
+++ b/taillife/src/App.css
@@ -1,38 +1,101 @@
-.App {
+.me-auto a {
+  text-decoration: none;
+  color: inherit;
+  margin-left: 20px;
+}
+.navbar-brand {
+  cursor: pointer;
+}
+.me-auto a:hover {
+  text-decoration: underline;
+}
+.gallerySearch {
   text-align: center;
+  margin: 80px 0 100px;
+}
+.gallerySearch span {
+  position: relative;
+}
+.searchBtn {
+  position: absolute;
+  top: 50%;
+  left: 3%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+.searchInput {
+  width: 100%;
+  max-width: 800px;
+  padding: 10px 50px;
+  border-radius: 30px;
+  outline: none;
+}
+.galleryCard {
+  text-align: center;
+  padding: 20px 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.galleryCard img {
+  border-radius: 30px;
+  width: 80%;
+  margin-bottom: 10px;
+  cursor: pointer;
+  transition: all 0.3s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.galleryCard img:hover {
+  transform: translateY(-20px);
+}
+.galleryCard img:hover ~ h4 {
+  border-bottom: 1px solid #000;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.galleryCard h4 {
+  max-width: 245px;
+  font-size: 20px;
+  margin: 0 auto 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  transition: all 0.3s;
+}
+.galleryDetail {
+  overflow-x: hidden;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+.video {
+  width: 500px;
+  min-width: 350px;
+}
+.desription {
+  width: 500px;
+  min-width: 350px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 30px;
 }
-
-.App-link {
-  color: #61dafb;
+.x {
+  font-size: 20px;
+  cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.desription h3 {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #000;
+}
+.desription a {
+  text-decoration: none;
+  color: inherit;
+}
+.desription a:hover {
+  text-decoration: underline;
+}
+.loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
